# server.js
@@ -5,31 +5,41 @@ const dotenv = require('dotenv');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
 
-// ROUTES
-const userRoutes = require('./routers/user-route');
-const courseRoutes = require('./routers/course-route');
-const enrollmentRoutes = require('./routers/enrollment-route');
 
+
+
+// Charger les variables d'environnement
 dotenv.config();
+
 const app = express();
 const PORT = process.env.PORT || 3000;
 
 // Middleware
+
 app.use(cors());
 app.use(express.json());
 
-// Swagger route
+// Routes d'API
+const userRoutes = require('./routers/user-route');
+const courseRoutes = require('./routers/course-route');
+const enrollmentRoutes = require('./routers/enrollment-route');
+
+// Swagger documentation
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
-// API Routes
-app.use('/api/user-route', userRoutes);
-app.use('/api/course-route', courseRoutes);
-app.use('/api/enrollment-route', enrollmentRoutes);
+// Définir les préfixes des routes pour les API REST
+app.use('/api/users', userRoutes);
+app.use('/api/courses', courseRoutes);
+app.use('/api/enrollments', enrollmentRoutes);
 
-// MongoDB Connection
+// Connexion à MongoDB (sans options dépréciées)
 mongoose.connect(process.env.MONGODB_URI)
   .then(() => {
     console.log('Connected to MongoDB');
-    app.listen(PORT, () => console.log(`Server running on port ${PORT}`));
+    app.listen(PORT, () => {
+      console.log(`Server running on port ${PORT}`);
+    });
   })
-  .catch(err => console.error(err));
+  .catch((err) => {
+    console.error('MongoDB connection failed:', err.message);
+  });
